# FC-StructureTools

./: MANIFEST.in  README.md  package.xml  pyproject.toml  setup.py
freecad/StructureTools/: calc.py  diagram.py  load_distributed.py  load_nodal.py  material.py  member.py  section.py  suport.py
